# fw16-led-matrixd

./: .gitignore  Cargo.toml  LICENSE  README.md  sample-posix-config.toml  sample-windows-config.toml
client/: Cargo.toml
client/src/: image.rs  ipc.rs  main.rs
client/src/args/: animate.rs  bootloader.rs  brightness.rs  crash.rs  drawbw.rs  explain.rs  flushcols.rs  mod.rs  pattern.rs  render.rs  sleep.rs  stagecol.rs  version.rs
daemon/: Cargo.toml  fw16-led-matrixd.service
daemon/src/: config.rs  daemon.rs  handler.rs  ipc.rs  logger.rs  main.rs  windows.rs
daemon/src/matrix/: commands.rs  error.rs  mod.rs
package_build/: build_releases.sh
package_build/deb/usr/share/doc/fw16-led-matrixd/: copyright
package_build/windows/: README.txt
shared/: Cargo.toml
shared/src/: error.rs  ipc.rs  lib.rs  posix.rs  version.rs  windows.rs
