[package]
name = "ledcli"
edition = "2021"
authors.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5.1", features = ["derive", "cargo"] }
log = "0.4.21"
log4rs = "1.3.0"
shared = { path = "../shared" }
interprocess = "2.2.2"
clap-num = "1.2.0"
image = "0.25.5"
