[package]
name = "shared"
edition = "2021"
authors.workspace = true
license.workspace = true
version.workspace = true

[target."cfg(unix)".dependencies]
glob = "0.3.2"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = [ "winreg" ] }
windows-service = "0.7.0"

[dependencies]
serde = { version = "1.0.217", features = [ "derive" ] }
serde_json = "1.0.135"
